# qt-cmake

./: CMakeLists.txt  chat-client-qt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
